# napari-script-editor

./: .gitignore  LICENSE  README.md  napari-script.py  requirements.txt  setup.cfg  tox.ini
.github/workflows/: plugin_preview.yml
example_scripts/: Delete_all_layers.py  Otsu_labeling.py  Plot_size_versus_shape.py  Subtract_background.py  Threshold_otsu.py  Toggle_layer_visibility_dock_widget.py
src/napari_script_editor/: __init__.py  _dock_widget.py  _scripts_directory.py  _utils.py
src/napari_script_editor/_tests/: test_dock_widget.py
