[metadata]
name = napari-script-editor
version = 0.0.1
author = Robert Haase
author_email = robert.haase@tu-dresden.de
url = https://github.com/haesleinhuepf/napari-script-editor
license = BSD-3-Clause
description = A python script editor for napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/napari-script-editor/issues
    Documentation = https://github.com/haesleinhuepf/napari-script-editor#README.md
    Source Code = https://github.com/haesleinhuepf/napari-script-editor
    User Support = https://github.com/haesleinhuepf/napari-script-editor/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    napari
    pyqode.python
    napari-tools-menu
    jedi<=0.17.2

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    napari-script-editor = napari_script_editor
